# package-managers-and-devcontainers

./: README.md  app.py
pip/: .pre-commit-config.yaml  README.md  __main__.py  requirements.txt
pipenv/: Pipfile  __main__.py  pyproject.toml
poetry/: __main__.py  pyproject.toml
uv/: __main__.py  pyproject.toml
