[project]
name = "uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.9.2",
    "numpy==2.1.2",
    "pandas==2.2.3",
    "pre-commit==4.4.0",
    "requests==2.32.3",
]

[tool.flake8]
max-line-length = 150
ignore = ["E501"]

[tool.black]
line-length = 150

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
